# devhaven

./: .gitignore  AGENTS.md  PLAN.md  README.md  README_cn.md  dev  package-lock.json  package.json  release  unocss.config.ts  vite.config.ts  work.md
.claude/: settings.local.json
.github/workflows/: nightly.yml  release.yml
docs/designs/: agent-runtime-session-fusion.md  issue-56-cli-control.md
docs/plans/: 2026-03-07-terminal-workspace-write-amplification.md  2026-03-10-project-scale-performance-plan.md  2026-03-11-performance-audit.md  2026-03-11-terminal-workspace-cutover.md  2026-03-13-collect-git-daily-log-noise.md  2026-03-13-devhaven-agent-pane-command-design.md  2026-03-13-devhaven-agent-pane-command-mvp.md  2026-03-13-devhaven-cmux-control-plane-design.md  2026-03-13-devhaven-cmux-control-plane-implementation.md  2026-03-14-devhaven-agent-runtime-control-plane-design.md  2026-03-14-devhaven-agent-runtime-control-plane-implementation.md  2026-03-14-remove-codex-monitor-implementation.md  2026-03-15-terminal-enhancement-primitive-first-design.md  2026-03-15-terminal-enhancement-primitive-first-implementation.md  2026-03-18-codex-notification-fix-plan.md  2026-03-18-terminal-sidebar-hit-area.md  2026-03-19-devhaven-swift-ghostty-bootstrap-design.md  2026-03-19-devhaven-swift-ghostty-bootstrap-implementation.md  2026-03-19-devhaven-swift-ghostty-supacode-replacement-design.md  2026-03-19-devhaven-swift-ghostty-supacode-replacement-implementation.md  2026-03-19-devhaven-swift-workspace-entry-design.md  2026-03-19-devhaven-swift-workspace-entry-plan.md  2026-03-20-devhaven-swift-ghostty-workspace-controller-design.md  (+78 more)
macos/: Package.resolved  Package.swift
scripts/: devhaven-agent-hook.mjs  devhaven-bash-history-semantics.test.mjs  devhaven-claude-hook.mjs  devhaven-claude-wrapper.mjs  devhaven-codex-hook.mjs  devhaven-codex-wrapper.mjs  devhaven-control.mjs  devhaven-control.test.mjs  devhaven-shell-integration.test.mjs  devhaven-zsh-histfile-regression.test.mjs  devhaven-zsh-stacked-zdotdir.test.mjs  tauri-cli-wrapper.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  terminal.json
src-tauri/src/: agent_control.rs  agent_launcher.rs  codex_monitor.rs  command_catalog.rs  git_ops.rs  interaction_lock.rs  lib.rs  models.rs  project_loader.rs  quick_command_manager.rs  shared_scripts.rs  skills.rs  storage.rs  system.rs  terminal.rs  web_event_bus.rs  web_server.rs  worktree_init.rs
src-tauri/src/terminal_runtime/: events.rs  mod.rs  quick_command_registry.rs  runtime.rs  session_registry.rs  types.rs
tasks/: lessons.md  todo.md
(+647 files in other folders)
